<resources>
    <string name="app_name">TunePAL</string>
    <string name="search_for_music_artist">Search for music, artist...</string>
    <string name="recently_played">Recently Played</string>
    <string name="mood_based_playlist">Mood Based Playlist</string>
    <string name="previous_button_description" />
    <string name="play_button_description" />
    <string name="next_button_description" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="music_name">Music Name</string>
    <string name="artist">Artist</string>
    <string name="username">username</string>
    <string name="user_example_com">user@example.com</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="music_image">music image</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="update_username">Update Username</string>
    <string name="change_password">Change Password</string>
    <string name="tell_us_more_about_yourself">Tell us more about yourself</string>
    <string name="enter_your_email_address">Enter your email address here..</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="return_to_login_page">Return to Login Page</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_bt">Login</string>
    <string name="name">Name</string>
    <string name="forgot_password_text">If you have forgotten your password, please enter your accounts email address below and click \'Reset My Password\' button. You will receive an email that contain a link to set a new password.</string>
</resources>