<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gradient_start"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_user_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_user_avatar"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_example_com"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bt" />

    </LinearLayout>

</LinearLayout>




