<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/music_img"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/backIconimageForgotPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Forgot Your Password?"
        android:textColor="@color/dark_text"
        android:textSize="28sp"
        android:gravity="left"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="25dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/dark_text"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editTextEmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextEmailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="emailAddress"
        android:background="@color/dark_accent"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/dark_text"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonResetYourPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#9D2323"
        android:padding="12dp"
        android:text="@string/reset_your_password"
        android:textColor="@color/dark_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailInput"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/emailInputStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#9D2323"
        android:textSize="15sp"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/buttonResetYourPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailInput"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailInput"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailInput"/>

    <TextView
        android:id="@+id/statusMessages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/dark_text"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textReturnToLoginPage"
        app:layout_constraintEnd_toEndOf="@+id/buttonResetYourPassword"
        app:layout_constraintStart_toStartOf="@+id/buttonResetYourPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetYourPassword" />

    <Button
        android:id="@+id/textReturnToLoginPage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_accent"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/return_to_login_page"
        android:textColor="@color/dark_gradient_end"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonResetYourPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonResetYourPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetYourPassword"
        app:layout_constraintVertical_bias="0.568"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>